--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   <input type="text" class="form-control" name="text-1645104307217" access="false" id="size-larg">
                 </div>
                 <div class="formbuilder-text form-group field-text-1645104309398">
-                  <label for="size-comp" class="formbuilder-text-label">Comprimento (cm):</label>
+                  <label for="size-comp" class="formbuilder-text-label">Profundidade (cm):</label>
                   <input type="text" class="form-control" name="text-1645104309398" access="false" id="size-comp">
                 </div>
                 <div class="formbuilder-checkbox-group form-group field-checkbox-group-1644687039810">
