--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           preco += opcionais[item.value];
       })
 
-      document.getElementById("total_text").textContent = "Valor Total: R$ " + preco.toLocaleString('pt-br', { style: 'currency', currency: 'BRL' });
+      document.getElementById("total_text").textContent = "Valor Total: " + preco.toLocaleString('pt-br', { style: 'currency', currency: 'BRL' });
     }
   </script>
   <!-- Contact -->
