--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <div class="col-md-12 section-title text-center">
           <h3>Calcule o preço de sua Parrilla</h3>
           <span class="section-title-line"></span>
+          <a href="index2.html"><button class="btn btn-danger" style="margin-top: 20px; "> Calculadora Churrasqueira </button></a> 
         </div>
 
         <div class="col-md-6 mb-60">
@@ -259,45 +260,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-7 col-md-8">
-          <div class="contact-form">
-            <form class='form' id='contact-form' method='post' data-toggle='validator'>
-              <input type='hidden' name='form-name' value='contact-form' />
-              <div class="messages"></div>
-              <div class="controls">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <input id="form_name" type="text" name="name" placeholder="Name *" required
-                        data-error="name is required.">
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <input id="form_email" type="email" name="email" placeholder="Email *" required
-                        data-error="Valid email is required.">
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <input id="form_subject" type="text" name="subject" placeholder="Subject">
-                    </div>
-                  </div>
-                  <div class="col-lg-12 form-group">
-                    <textarea id="form_message" name="message" class="form-control" placeholder=" Type Your Message "
-                      rows="4" required data-error="Please,leave us a message."></textarea>
-                    <div class="help-block with-errors"></div>
-                  </div>
-                  <div class="col-lg-12 text-center">
-                    <button class="bttn">Send Message</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
