--- a/index2.html
+++ b/index2.html
@@ -117,7 +117,7 @@
                     </label>
                     <div class="radio-group">
                       <div class="formbuilder-radio">
-                        <input name="radio-group-grelha" checked=true access="false" id="radio-group-grelha-0"
+                        <input name="radio-group-grelha" checked="true" access="false" id="radio-group-grelha-0"
                           value="0" type="radio">
                         <label for="radio-group-grelha-0">Cabo de madeira</label>
                       </div>
