--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo-white.png" width="100"
           alt="logo" class="logo-1"> </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
           class="fas fa-bars"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -35,7 +35,7 @@
           <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">Sobre</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Contato</a> </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </nav>
   <!-- End Navbar -->
